# RsWorkTools

./: .gitignore  CMakeLists.txt  ToolsRuntimeProj.pro  pvs_comment.py  update_translations.py
CircularMenuTest/: mainwindow.h  (+2 more)
RslTest/: CMakeLists.txt  RslTest.pro  Test.mac  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  treehadertest.cpp  treehadertest.h  treehadertest.ui
RslTest/mac/: Test.mac
RslToolRuntimeStatic/: CMakeLists.txt  RslToolRuntimeStatic.pro  rsltoolsruntimemodule.cpp  rsltoolsruntimemodule.h  toolsruntimemodule.cpp  toolsruntimemodule.h
RslToolRuntimeStatic/release/: rsl_toolsruntime.lib
ToolsRuntime/: CMakeLists.txt  Doc.doxygen  SARibbon.cpp  SARibbon.h  SARibbon.pri  ToolsRuntime.pro  ToolsRuntime_global.h  VarLocker.hpp  aboutdlg.cpp  aboutdlg.h  aboutdlg.ui  com.rs.worktools.runtime.xml  errordlg.cpp  errordlg.h  errordlg.ui  errorfiltermodel_p.h  errorsmodel.cpp  errorsmodel.h  errorwidget.cpp  errorwidget.h  errorwidget.ui  iconlibdlg.cpp  iconlibdlg.h  iconlibdlg.ui  iconthememanager.cpp  iconthememanager.h  levenshtein.cpp  propertywidgetmapper.cpp  propertywidgetmapper.h  rslexecutor.cpp  rslexecutor.h  toolsqlconverter.cpp  toolsqlconverter.h  toolsruntime.cpp  toolsruntime.h  updatechecker.cpp  updatechecker.h  updatecheckermessagebox.cpp  updatecheckermessagebox.h  windowactionsregistry.cpp  (+3 more)
ToolsRuntime/7zip/: archive.cpp
ToolsRuntime/codeeditor/: codeeditor.cpp  codeeditor.h  codehighlighter.cpp  codehighlighter.h  codesearchwidget.cpp  codesearchwidget.h  cppcodehighlighter.h  highlighteditmodel.cpp  highlighteditmodel.h  highlighterstyle.cpp  highlighterstyle.h  sqlcodehighlighter.cpp  xmlcodehighlighter.cpp  xmlcodehighlighter.h
ToolsRuntime/icons/vs_theme/: index.theme
ToolsRuntime/installerfiles/mac/: dynamicobj.d32
ToolsRuntime/netapi/: apiuser.cpp  apiuser.h
ToolsRuntime/optionsdlg/: OptionsPage.cpp  OptionsPage.h  codeeditoroptionspage.cpp  codeeditoroptionspage.h  codeeditoroptionspage.ui  commandsoptions.cpp  commandsoptions.h  commandsoptions.ui  commandsstorage.cpp  commandsstorage.h  jsonsettings.cpp  jsonsettings.h  logoptionspage.cpp  logoptionspage.h  logoptionspage.ui  optionsdlg.cpp  optionsdlg.h  optionsdlg.ui  rsloptionspage.cpp  rsloptionspage.h  rsloptionspage.ui  styleoptionspage.cpp  styleoptionspage.h  styleoptionspage.ui  updateoptionspage.cpp  updateoptionspage.h  updateoptionspage.ui
ToolsRuntime/res/: iconlib.qrc  res.qrc  resource.h  winfmt.rc
ToolsRuntime/res/about/: ribbon_index_template.html
ToolsRuntime/res/codeeditoroptions/: ListParams.json  example.cpp
ToolsRuntime/res/translations/: SARibbon_ru.qm  SARibbon_ru.ts
ToolsRuntime/res/ui/: StyleTest.ui
ToolsRuntime/ribbon/: CategoryContentWidgetStyle.h  applicationwidgetbase.cpp  applicationwidgetbase.h  appoptionscontentwidget.cpp  appoptionscontentwidget.h  categorycontentwidget.cpp  categorycontentwidget.h  categorycontentwidgetstyle.cpp  ribbonaboutdlg.cpp  ribbonaboutdlg.h  ribboncommandlistwidget.cpp  ribboncommandlistwidget.h  ribboncommandscontentwidget.cpp  ribboncommandscontentwidget.h  ribboncommandstorage.cpp  ribboncommandstorage.h
ToolsRuntime/rslmodule/: iostaticmodule.cpp  iostaticmodule.h  iterableobjectbase.cpp  iterableobjectbase.h  regexpmodule.cpp  regexpmodule.h  richtextmodule.cpp  richtextmodule.h  rslstringlist.cpp  rslstringlist.h  sqlstaticmodule.cpp  sqlstaticmodule.h  stddialogs.cpp  stddialogs.h  toolsruntimemodule.cpp  toolsruntimemodule.h  toolsruntinersl.cpp  toolsruntinersl.h  uistaticmodule.cpp  uistaticmodule.h  variantlist.cpp  variantlist.h
ToolsRuntime/rslmodule/dialogs/: message_box.cpp
ToolsRuntime/rsscript/: Methods.cpp  Properties.cpp  RslModulePluginInterface.h  Signals.cpp  TRsbRSLInstTmpl.hpp  addtemplproc.hpp  registerinfobase.cpp  registerinfobase.h  registerobjlist.cpp  registerobjlist.hpp  rscomfunc.cpp  rslibdynamicfuncs.h  rsllistitemcontainer.cpp  rsllistwrapper.cpp  rsllistwrapper.h  rslobjconnections.cpp  rslobjconnections.h  rslstaticmodule.cpp  rslstaticmodule.h  typeinfo_p.h  typeinfofunc.cpp
ToolsRuntime/spelling/: spellchecker.cpp  spellchecker.h  spellcheckerdlg.cpp  spellcheckerdlg.h  spellcheckerdlg.ui  spellstringsdlg.cpp  spellstringsdlg.h  spellstringsdlg.ui
ToolsRuntime/style/: qwindowsstyle.cpp  qwindowsstyle.h  qwindowsstyle_p.h  qwindowsvistastyle.h  qwindowsvistastyle_p.h  qwindowsxpstyle.cpp  qwindowsxpstyle.h  qwindowsxpstyle_p.h  windowsmodernstyle.cpp  windowsmodernstyle.h
ToolsRuntime/svn/: svnstatusmodel.cpp  svnstatusmodel.h
ToolsRuntime/syntaxhighlighter/: Visual Studio (Light).json
ToolsRuntime/widgets/: circularmenu.cpp  circularmenu.h  codeinputdialog.cpp  codeinputdialog.h  doubleprogressdialog.cpp  doubleprogressdialog.h  doubleprogressdialogprivate.cpp  doubleprogressdialogprivate.h  selectactiondlg.cpp  selectactiondlg.h  selectactiondlg.ui  stringlisteditor.cpp  stringlisteditor.h  stringlisteditor.ui
WindowsModernStyle/: CMakeLists.txt  WindowsModernStyle.json  WindowsModernStyle.pro  windowsmodernstyleplugin.cpp  windowsmodernstyleplugin.h
WindowsModernStyle/style/: qwindowsstyle.cpp  qwindowsstyle.h  qwindowsstyle_p.h  qwindowsvistastyle.cpp  qwindowsvistastyle.h  qwindowsvistastyle_p.h  qwindowsvistastyle_p_p.h  qwindowsxpstyle.cpp  qwindowsxpstyle.h  qwindowsxpstyle_p.h  qwindowsxpstyle_p_p.h  windowsmodernstyle.cpp  windowsmodernstyle.h
(+620 files in other folders)
